grammar.js
        source_file: $ => seq(
            repeat($._source_unit),
        ),

        //  -- [ Source Element ] --  
        _source_unit: $ =>  choice(
            $._directive,
            $._declaration,
        ),

        //  -- [ Directives ] --  
        _experimental_directives: $ => choice(
            "ABIEncoderV2",
            "SMTChecker",
        ),

        experimental_directive: $ => seq(
            "experimental",
            $._experimental_directives,
        ),

        solidity_directive: $ => seq(
            "solidity",
            repeat(field("version_constraint", $._pragma_version_constraint)),
        ),
        // Pragma
        pragma_directive: $ => seq(
            "pragma",
            choice(
                $.solidity_directive,
                $.experimental_directive
            ),
            $._semicolon,
        ),

        _pragma_version_constraint: $ => seq(
            optional($._solidity_version_comparison_operator),
            $._solidity_version,
        ),
        _semicolon: $ => ';',
